syntax = "proto3";
package map_service;
import "google/protobuf/empty.proto";
import "game_service.proto";

service MapService {
    rpc ExportPlayer (ExportRequest) returns (google.protobuf.Empty);
    rpc ImportPlayer (game_service.PlayerInfo) returns (google.protobuf.Empty);
    rpc GetHeaviestZonePlayers (google.protobuf.Empty) returns (ZonePlayersReply);
    rpc GetNPlayers (GetPlayersRequest) returns (GetPlayersReply);
    rpc ConnectServer (ConnectRequest) returns (google.protobuf.Empty);
    rpc DisconnectServer (ConnectRequest) returns (google.protobuf.Empty);
    rpc GetOverhead (google.protobuf.Empty) returns (OverheadReply);
    rpc InternalLogin (game_service.PlayerInfo) returns (google.protobuf.Empty);
    rpc InternalLogout (game_service.PlayerIdRequest) returns (google.protobuf.Empty);
    rpc InternalAoe (InternalAoeRequest) returns (google.protobuf.Empty);
    rpc InternalMoving (game_service.MovingRequest) returns (game_service.Coord);
    rpc InternalQuery (game_service.QueryRequest) returns (game_service.QueryReply);
}

message ExportRequest {
    uint64 player_id = 1;
    string addr = 2;
    game_service.Coord coord = 3;
}

message ZonePlayersReply {
    uint64 zone_id = 1;
    repeated uint64 player_ids = 2;
}

message GetPlayersRequest {
    uint64 n = 1;
}

message GetPlayersReply {
    repeated uint64 player_ids = 1;
}

message ConnectRequest {
    string addr = 1;
}

message OverheadReply {
    uint64 count = 1;
}

message InternalAoeRequest {
    uint64 player_id = 1;
    float x = 2;
    float y = 3;
    float radius = 4;
}